[package]
name = "liusearch"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = [
    "std",
    "serde",
    "clock"
], default-features = false }
eframe = { version = "0.17.0", features = ["persistence"] }
rfd = "0.8"
num-format = "0.4"
progress-streams = "1.1"
copypasta = "0.7"
regex = "1.5"
ureq = { version = "2.3", features = ["json"] }
pgp = "0.7"
triple_accel = "0.4"
anyhow = "1.0"
flate2 = "1.0"
rayon = "1.5"
