[package]
name = "liusearch"
version = "1.4.2"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = [
    "std",
    "serde",
    "clock"
], default-features = false }
eframe = { version = "0.22.0", features = ["persistence"] }
rfd = "0.11"
num-format = "0.4"
progress-streams = "1.1"
copypasta = "0.8"
regex = "1.8"
ureq = { version = "2.6", features = ["json"] }
pgp = "0.10"
triple_accel = "0.4"
anyhow = "1.0"
flate2 = "1.0"
rayon = "1.7"
